# mcp-shield

./: .gitignore  LICENSE  README.md  pyproject.toml
mcp_shield/: __init__.py  __main__.py  audit.py  cli.py  config.py  policy.py  proxy.py  schema_pin.py
mcp_shield/filters/: __init__.py  inbound.py  outbound.py
tests/: test_config.py  test_filters.py  test_schema_pin.py
